feat(quiz): enhance interaction and update project config
- Add 'Show Answer' button to quiz interface
- Improve Japanese text masking logic for cloze questions
- Fix speech recognition language mapping using BCP-47 codes
- Exclude E2E tests from Vitest configuration
- Add Playwright dependencies
- Update documentation and remove obsolete Genius setup guide

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -219,6 +219,11 @@
     "checkAnswer": "Check Answer",
     "tryAgain": "Try Again",
     "backToSetup": "Back to Setup",
+    "perfect": "✨ Perfect",
+    "learning": "📚 Learning",
+    "correctAnswer": "Correct Answer",
+    "showAnswer": "Show Answer",
+    "iDontKnow": "I don't know",
     "correct": "Correct!",
     "incorrect": "Incorrect",
     "showAnswer": "Show Answer",
@@ -251,6 +256,7 @@
     "placeholder": {
         "cloze": "Type the missing word...",
         "speaking": "Press mic and speak...",
+        "listening": "Type what you hear...",
         "writing": "Type answer..."
     },
     "title": {
