feat(ui): add ConfirmDialog system to replace browser confirm()
Implement custom ConfirmDialog component with DialogContext and useConfirmDialog hook to replace browser confirm() calls for App Store compliance (Guideline 4.2).

Changes:
- Add ConfirmDialog component with Tailwind styling
- Add DialogContext for global dialog state management
- Add useConfirmDialog hook for easy dialog triggering
- Integrate DialogProvider in App.tsx
- Remove browser confirm() calls from PhraseContext
- Update DataManagementSection to use new dialog system
- Add translation keys for dialog labels (en.json, ko.json)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -87,7 +87,9 @@
     "loadSuccess": "Data loaded successfully!",
     "loadFailed": "Failed to load data: {{error}}",
     "resetProgress": "Reset Learning Progress",
+    "resetConfirm": "This will reset all your learning progress including completed items and quiz stats. Your phrase list will be preserved.",
     "deleteAllData": "Delete All Data (Hard Reset)",
+    "deleteAllConfirm": "This will permanently delete all your data including phrases, learning progress, and settings. This action cannot be undone.",
     "csvGuideTitle": "CSV Format Guide",
     "csvGuideDescription": "Your CSV file should follow this structure. The first row (header) is optional but recommended.",
     "csvFormat": "sentence,meaning,pronunciation,tags",
