--- a/public/locales/ko.json
+++ b/public/locales/ko.json
@@ -70,7 +70,9 @@
     "backupData": "백업",
     "loadBackup": "복원",
     "resetProgress": "진행 초기화",
+    "resetConfirm": "모든 학습 기록을 초기화합니다. 완료한 항목과 퀴즈 통계가 삭제됩니다. 문장 목록은 유지됩니다.",
     "deleteAllData": "전체 삭제 (초기화)",
+    "deleteAllConfirm": "모든 데이터가 영구적으로 삭제됩니다. 문장 목록, 학습 기록, 설정이 모두 삭제되며 복구할 수 없습니다.",
     "csvGuideTitle": "CSV 가이드",
     "csvGuideDescription": "CSV 구조.",
     "csvFormat": "문장,의미,발음,태그",
