refactor(ui): migrate remaining confirm() calls to useDialog
Migrated confirm() dialogs to useDialog hook in:
- src/components/StarterPackageSelection.tsx
- src/components/builder/CsvEditorModal.tsx
- src/components/music/PlaylistPanel.tsx
- src/views/BuilderView.tsx
- src/views/QuizView.tsx
- src/views/settings/ContentSourcesSection.tsx

Also added corresponding translation keys to en.json and ko.json.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -184,7 +184,9 @@
     "editCsvContent": "Edit CSV Content",
     "reviewAndEdit": "Review and edit before adding.",
     "confirmGeneration": "Confirm Generation",
-    "confirmAndAdd": "Confirm & Add"
+    "confirmAndAdd": "Confirm & Add",
+    "emptyContentConfirm": "Content is empty. This will clear your list. Continue?",
+    "noValidItemsConfirm": "No valid items found. Clear list?"
   },
   "music": {
     "searchPlaceholder": "Search song or artist...",
